--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,17 @@
-Package: RPACKAGES
+Package: FALL234753RAMI0166
 Type: Package
-Title: What the Package Does (Title Case)
+Title: MATH 4753 Functions
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: David Ramirez
+Maintainer: David Ramirez <david.a.ramirez.chavez-1@ou.edu>
+Description: Functions used in labs and assignments for the course.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.2.3
+URL: https://github.com/DavidRamirezz/RPACKAGESmath4753
+BugReports: https://github.com/DavidRamirezz/RPACKAGESmath4753/issues
+Depends: R (>= 2.10)
+NeedsCompilation: no
+Packaged: 2023-11-04 00:04:08 UTC; david
+
